docs/apache-airflow-providers-postgres/5.14.0/_sources/_api/airflow/providers/postgres/operators/postgres/index.rst.txt
:py:mod:`airflow.providers.postgres.operators.postgres`
=======================================================

.. py:module:: airflow.providers.postgres.operators.postgres


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.postgres.operators.postgres.PostgresOperator




.. py:class:: PostgresOperator(*, postgres_conn_id = 'postgres_default', database = None, runtime_parameters = None, **kwargs)


   Bases: :py:obj:`airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`

   Executes sql code in a specific Postgres database.

   This class is deprecated.

   Please use :class:`airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.

   :param sql: the SQL code to be executed as a single string, or
       a list of str (sql statements), or a reference to a template file.
       Template references are recognized by str ending in '.sql'
   :param postgres_conn_id: The :ref:`postgres conn id <howto/connection:postgres>`
       reference to a specific postgres database.
   :param autocommit: if True, each command is automatically committed.
       (default value: False)
   :param parameters: (optional) the parameters to render the SQL query with.
   :param database: name of database which overwrite defined one in connection
   :param runtime_parameters: a mapping of runtime params added to the final sql being executed.
       For example, you could set the schema via `{"search_path": "CUSTOM_SCHEMA"}`.
       Deprecated - use `hook_params={'options': '-c <connection_options>'}` instead.

   .. py:attribute:: template_fields_renderers
      :type: ClassVar[dict]

      

   .. py:attribute:: ui_color
      :value: '#ededed'

      


